@@ -9,6 +9,7 @@
 * Fix install issue, thanks Eoin McLoughlin
 * Update install documentation
 * Bugfixes
+* Rethemed Admin section, thanks Keith Bishop
 
 2.6.2  Will Entriken <cameralife AT phor.net>
 * Website update, thanks to Rajesh Sundaram
